# MPP-stereo-disparity

./: .gitignore  CMakeLists.txt  README.md
doc/: REPORT.md
src/: CMakeLists.txt  main.cpp  main.h  phase1.cpp  phase1.h  phase2.cpp  phase2.h  phase3.cpp  phase3.h  phase4.cpp  phase4.h  phase5.cpp  phase5.h
src/Stopwatches/: CMakeLists.txt  Stopwatches.cpp  Stopwatches.h  example.cpp  runtimer.h
src/calculations/: calculations_wrapper.cpp  calculations_wrapper.h
src/kernels/: grayscale.cl  p1-4-5-grayscale-resize.cl  p1-ma.cl  p1-matrix-addition.cl  p1-moving-avg.cl  p4-average.cl  p4-cc-of.cl  p4-cc.cl  p4-of.cl  p4-standard-deviation.cl  p4-zncc-max.cl  p5-average.cl  p5-cc.cl  p5-of.cl  p5-standard-deviation.cl  p5-zncc-max.cl
src/lodepng_wrapper/: CMakeLists.txt  example.cpp  lodepng_wrapper.cpp  lodepng_wrapper.h
src/mrfolder/: 5x5filterKernel.cl  resize  resize.cpp  zncc.cpp  znccpy.py
src/occlusion_fill/: CMakeLists.txt  occlusion_fill.cpp  occlusion_fill.h
src/opencl_base/: CMakeLists.txt  opencl_base.cpp  opencl_base.h
src/opencl_hello_world/: CMakeLists.txt  example.cpp  hello-world.cpp  hello-world.h
src/phase1step2_mr/: hello-1234  hello-1234.cl  hello-1234.cpp  step2.cpp  step2cVersion  step2cVersion.c  step2cppVersion copy  step2cppVersion.cpp  step2cver.c  step2k.cl  step2oclVer.cpp  vecAdd  vecAdd.c  vector_add_kernel.cl  vectormain  vectormain.cpp
src/runtimer/: CMakeLists.txt  example.cpp  runtimer.cpp  runtimer.h
src/step2_mr/: s2ocl.cpp  step2.cpp  step2k.cl
src/utilities/: CMakeLists.txt  example.cpp  util.cpp  util.h  utils.cpp  utils.h
tests/: CMakeLists.txt  Stopwatches_tests.cpp  cross_checking_tests.cpp  grayscale.cl  lodepng_wrapper_tests.cpp  occlusion_fill.h  occlusion_fill_tests.cpp  ocl_grayscale_tests.cpp  runtimer_tests.cpp
